--- a/day01/blog_dotfather/templates/list.template.html
+++ b/day01/blog_dotfather/templates/list.template.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Blog</title>
-</head>
-<body>
-    <h1>Blog Posts:</h1>
-    <ul>
-        {post_list}
-    </ul>
-</body>
-</html>
+{% extends 'base.template.html' %}
+
+{% block headline %}
+  Blog Posts:
+{% endblock %}
+    
+{% block content %}
+  <ul>
+  {% for post in post_list %}
+    <li><a href="{{ post.id }}">{{ post.title }}</a></li>
+  {% endfor %}
+  </ul>
+{% endblock %}
