--- a/flask/blog/templates/post.html.j2
+++ b/flask/blog/templates/post.html.j2
@@ -1,12 +1,12 @@
 {% extends "base.html.j2" %}
 {% block content %}
 <div class="container">
-<h1>{{ post.title }}</h1>
+<h1>{{ post.title | upper }}</h1>
 
 <div class="jumbotron">
-<small>{{ post.date }}</small>
+<small>{{ post.date | format_date }}</small>
 <p>
-    {{ post.content }}
+    {{ markdown(post.content) }}
 </p>
 </div>
 </div>
